# 添加遗漏的图片

--- a/blog/2016-08-01-使用css实现箭头图标.md
+++ b/blog/2016-08-01-使用css实现箭头图标.md
@@ -113,7 +113,11 @@ what，似乎有点儿三角形的样子。(其实还没有)
 }
 ```
 
-这....果然不出我们所料。四个三角形出现了。这里得提一下，4个等腰直角三角形的直角顶点到最长那条边的距离就是10px。(不信可以用截图工具去量一下)。这已经完成了百分之80了。我们只需要取其中的一个修改成我们想要的颜色跟大小就可以了。我们要一个向下的箭头，这里为了避免偏移我们不设置`border-bottom`的值，我们把 `border-left`, `border-right`的值分别设置为透明，在稍微调整一下边框大小，还有，最后`border-top`的颜色我们设置回黑色。
+这....果然不出我们所料。四个三角形出现了。
+
+![four caret](image/four_caret.png)
+
+这里得提一下，4个等腰直角三角形的直角顶点到最长那条边的距离就是10px。(不信可以用截图工具去量一下)。这已经完成了百分之80了。我们只需要取其中的一个修改成我们想要的颜色跟大小就可以了。我们要一个向下的箭头，这里为了避免偏移我们不设置`border-bottom`的值，我们把 `border-left`, `border-right`的值分别设置为透明，在稍微调整一下边框大小，还有，最后`border-top`的颜色我们设置回黑色。
 
 ``` css
 .caret {
